<?xml version="1.0"?>
<package>
  <name>hanp_layer_msgs</name>

  <version>0.0.1</version>

  <description>person detection message definitions (for human aware navigation planning)</description>

  <maintainer email="harmish@laas.fr">harmish khambhaita</maintainer>

  <!--  <author email="author_email">author_name</author>  -->

  <license>BSD</license>

  <!--  <url website >http://wiki.ors.org/hanp_layer_msgs</url>  -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <!--  <test_depend>some_pkg</test_depend>  -->

  <!--  <conflict>some_pkg</conflict>  -->

  <!--  <replace>some_pkg</replace>  -->

  <export>
    <!-- <metapackage/> -->
  </export>
</package>
