<?xml version="1.0"?>
<package>
  <name>hanp_layer_msgs</name>

  <version>0.0.1</version>

  <description>person detection message definitions (for human aware navigation planning)</description>

  <!--  <author email="harmish@laas.fr">harmish khambhaita</author>  -->
  <maintainer email="harmish@laas.fr">harmish khambhaita</maintainer>


  <license>BSD</license>

  <!--  <url website >http://wiki.ors.org/hanp_layer_msgs</url>  -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
