<?xml version="1.0"?>
<package>
  <name>hanp_msgs</name>

  <version>0.0.2</version>

  <description>person detection message definitions (for human aware navigation planning)</description>

  <!--  <author email="harmish@laas.fr">harmish khambhaita</author>  -->
  <maintainer email="harmish@laas.fr">harmish khambhaita</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/harmishhk/hanp_msgs</url>
  <url type="bugtracker">https://github.com/harmishhk/hanp_msgs/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>

</package>
